[coding-bible] feat: add dto/controllers/interfaces/useCase for language entity

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,10 @@
       "@core/*": ["src/core/*"],
       "@shared/*": ["src/shared/*"],
       "@config/*": ["src/config/*"]
-    }
-  }
+    },
+    "moduleResolution": "node",
+    "esModuleInterop": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
