test: configure Vitest and add unit tests for Language entity
- Add Vitest configuration with coverage and UI support
- Create unit tests for Language entity and its use cases:
  - Language entity tests (creation, properties validation)
  - CreateLanguageUseCase tests
  - FindLanguageUseCase tests
  - FindAllLanguagesUseCase tests
  - UpdateLanguageUseCase tests
  - DeleteLanguageUseCase tests
- Add type-safe mock repository utility
- Configure test scripts in package.json:
  - test: run tests
  - test:watch: run tests in watch mode
  - test:coverage: run tests with coverage
  - test:ui: run tests with UI

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "types": ["vitest/globals"],
     "paths": {
       "@core/*": ["src/core/*"],
       "@shared/*": ["src/shared/*"],
