--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "vitest",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "test:integration": "vitest run src/core/application/use-cases/language/__tests__/language.use-cases.integration.spec.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -52,6 +53,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "mongodb-memory-server": "^10.1.4",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
